--- a/personalweb/css/styles.css
+++ b/personalweb/css/styles.css
@@ -74,3 +74,27 @@ article h3 {
 #personal-web-article iframe {
     min-height: 25em;
 }
+
+table {
+    border: 8px solid;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+td {
+    border: 2px solid black;
+}
+
+td {
+    width: 20%;
+    height: 3em;
+    text-align: center;
+}
+
+td.cls-table-footer {
+    border-top: 8px solid;
+}
+
+td.cls-table-separator {
+    background-color: cornflowerblue;
+}
