--- a/personalweb/css/styles.css
+++ b/personalweb/css/styles.css
@@ -316,10 +316,183 @@ section#background .three {
     background-size: auto 70%, auto 20%;
     background-color: rgb(221, 208, 28);
 }
+
 section#background .four {
     background: url(../img/flame.png) repeat-x bottom, url(../img/asterisk.svg) repeat;
     background-size: auto 20%;
     background-color: rgb(20, 177, 230);
+}
+
+section#two-columns > div {
+    width: 100%;
+}
+
+section#two-columns > div p {
+    height: 3em;
+    text-align: center;
+    line-height: 3em;
+}
+
+section#two-columns .one p {
+    display: inline-block;
+    border: 4px solid;
+    width: 40%;
+}
+
+section#two-columns .two p {
+    display: inline-block;
+    border: 6px solid;
+}
+
+section#two-columns .two p:nth-of-type(1) {
+    width: 70%;
+}
+
+section#two-columns .two p:nth-of-type(2) {
+    width: 20%;
+}
+
+section#two-columns .three p:nth-of-type(1) {
+    width: 70%;
+    border: 2px solid;
+    float: left;
+}
+
+section#two-columns .three p:nth-of-type(2) {
+    width: 20%;
+    background-color: gray;
+    float: right;
+}
+
+section#two-columns .four {
+    display: flex;
+    gap: 2em;
+    justify-content: space-between;
+}
+
+section#two-columns .four p {
+    background-color: lightgray;
+    flex-grow: 1;
+}
+
+.clear-float {
+    clear: both;
+}
+
+section#three-columns {
+    width: 80%;
+}
+
+section#three-columns header {
+    background-color: yellow;
+    font-size: 2em;
+    font-weight: bold;
+    height: 2em;
+    line-height: 2em;
+    border: none;
+}
+
+section#three-columns .content > p{
+    height: 10em;
+    line-height: 10em;
+    width: 18%;
+    margin: 0;
+}
+
+section#three-columns .content > p:nth-of-type(1){
+    background-color: #BECDFE;
+    float: left;
+}
+
+section#three-columns .content > p:nth-of-type(2){
+    background-color: #BDB76B;
+    float: left;
+    width: 64%;
+}
+
+section#three-columns .content > p:nth-of-type(3){
+    background-color: #FF6347;
+    float: right;
+}
+
+section#three-columns footer {
+    border: none;
+    text-align: center;
+    background-color: #FA8072;
+}
+
+section#three-columns footer > p {
+    font-size: 1rem;
+    height: 2em;
+    line-height: 2em;
+}
+
+section#centered-boxes {
+    position: relative;
+}
+
+section#centered-boxes > p {
+    border: 2px solid;
+    line-height: 1.5em;
+    text-align: center;
+    padding: .5em;
+}
+
+section#centered-boxes > p:first-of-type {
+    margin: 2em auto;
+    width: 70%;
+}
+
+section#centered-boxes > p:last-of-type {
+    position: absolute;
+    top: 6em;
+    left: 50%;
+    margin-left: -25%;
+    width: 50vw;
+}
+
+section#menu > div {
+    width: 100%;
+}
+
+section#menu > div > p, section#menu > div > ul > li {
+    border: 2px solid;
+    border-right: 1px;
+    margin: 0;
+    width: 18%;
+    text-align: center;
+    padding: .5em;
+}
+
+section#menu > div > p.selected {
+    background-color: black;
+    color: white;
+    border-color: black;
+}
+
+section#menu > div > p:last-of-type {
+    border-right: 2px solid;
+}
+
+section#menu .one > p {
+    display: inline-block;
+}
+
+section#menu .two {
+    height: 2em;
+}
+
+section#menu .two > p {
+    float: left;
+}
+
+section#menu .three ul {
+    padding: 0;
+}
+
+section#menu .three li {
+    display: inline-block;
+    list-style: none;
 }
 
 @media screen and (max-width: 900px) {
